# tessia

./: .coveragerc  .gitignore  .gitlab-ci-shellrunner.yml  .gitlab-ci.yml  .pylintrc  .travis.yml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  RELEASE.md  THIRD_PARTY.md  dev-requirements.txt  doc-requirements.txt  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: unit-test.yaml
.tekton/: pipeline.yaml  pipelinerun.yaml
.tekton/configmap/: tessia-server-config.yaml  tessia-supervisor-config.yaml
.tekton/deployments/: tessia-mediator.yaml  tessia-server.yaml
.tekton/pvc/: redis-pvc.yaml  tessia-db-pvc.yaml  tessia-server-etc.yaml  tessia-server-jobs.yaml  tessia-server-static.yaml
.tekton/services/: db.yaml  mediator.yaml  tessia-server.yaml
.tekton/statefulsets/: tessia-db.yaml
.tekton/tasks/: apply-resources.yaml  buildah  change-params.yaml  change-spawner.yaml  check-deployment-pods.yaml  cleanup.yaml  copy-repo.yaml  git-clone  git-clone-pr.yaml  run-cli-tests.yaml  run-unit-tests.yaml  verify-and-init-db.yaml
cli/: .pylintrc  README.md  dev-requirements.txt  pip-install  requirements.txt  setup.cfg  setup.py  tox.ini
cli/bash/: tessia-bash-completion.sh
cli/tessia/: __init__.py
cli/tessia/cli/: __main__.py  client.py  config.py  filters.py  main.py  output.py  secutils.py  session.py  types.py  utils.py
cli/tessia/cli/cmds/: __init__.py  autotemplate.py  conf.py  os.py  repo.py
cli/tessia/cli/cmds/job/: __init__.py  job.py
cli/tessia/cli/cmds/monitoring/: __init__.py  hmc.py
cli/tessia/cli/cmds/net/: __init__.py  ip.py  subnet.py  zone.py
cli/tessia/cli/cmds/perm/: __init__.py  project.py  role.py  user.py
cli/tessia/cli/cmds/storage/: __init__.py  server.py  vol.py
cli/tessia/cli/cmds/system/: __init__.py  iface.py  model.py  prof.py  system.py  vol.py  wizard.py
cli/tessia_cli/: client.py  config.py  main.py  output.py  session.py  types.py  utils.py
cli/tessia_cli/cmds/: __init__.py  autotemplate.py  conf.py  repo.py
cli/tessia_cli/cmds/job/: __init__.py  job.py
cli/tessia_cli/cmds/net/: __init__.py  ip.py  subnet.py  zone.py
cli/tessia_cli/cmds/perm/: __init__.py  project.py  role.py  team.py  user.py
cli/tessia_cli/cmds/storage/: __init__.py  server.py  vol.py
cli/tessia_cli/cmds/system/: __init__.py  iface.py  model.py  prof.py  system.py  vol.py
cli/tests/: run  runner  test_parmfile_2  wrapper.py
cli/tests/files/net-command_test/: import-ip.csv
cli/tests/files/storage-command_test/: import-vol.csv
cli/tests/files/system-command_test/: import-system-no_ips.csv  import-system.csv  kvm-guest.xml
cli/tests/files/system_autoinstall_and_job_test/: test_parmfile-echo
cli/tests/fixtures/: __init__.py  autoinstall.py
cli/tests/static_testcases/: autotemplate-command_test.yaml  conf-command_test.yaml  net-command_test.yaml  os-command_test.yaml  perm-command_test.yaml  repo-command_test.yaml  roles_schema_test.yaml  storage-command_test.yaml  system-command_test.yaml  system_autoinstall_and_job_test.yaml  systems_actions.yaml  wizard-command_test.yaml
cli/tests/util/: base_fixture.py  cmd_fixture.py  static_executor.py
components/.cargo/: config
components/installer-webhook/: Cargo.toml
components/installer-webhook/src/: config.rs  control.rs  lib.rs  main.rs  servers.rs
doc/: index.md  mkdocs.yml  releases.md
doc/developers/: arch.md  architecture.odp  client_tests.md  coding_guidelines.md  components.md  continuous_integration.md  contributing.md  database.md  design.md  dev_env.md  dev_process.md  documentation.md  scheduler.md  tests.md  unit_tests.md
doc/users/: ansible_machine.md  api.md  autoinstall_machine.md  canton.md  client.md  client_install.md  getting_started.md  howtos.md  kvm_fcp_macvtap_install.md  permissions_model.md  powerman_machine.md  resources_model.md  server_conf.md  server_install.md  supported_features.md  supported_install_combinations.md  tela_machine.md  versioning.md  zvm_dasd_osa_install.md
etc/: engine.yaml  server.yaml  uwsgi.yaml
mesh_components/control_node/: __init__.py  __main__.py
mesh_components/control_node/api/: __init__.py  v1.py
mesh_components/control_node/conf/: default.json
mesh_components/control_node/control_node/: certificate_authority.py  detached.py  errors.py  factory.py  manager.py  supervisord.py
mesh_components/control_node/doc/: api.md  index.md
mesh_components/control_node/tests/: test_api.py  test_ca.py  test_detached.py
mesh_components/permission_manager/api/: __init__.py  v1.py
mesh_components/permission_manager/permission_manager/: __init__.py
mesh_components/permission_manager/service_layer/: entrypoints_handlers.py
mesh_components/permission_manager/tests/: test_api.py
mesh_components/resource_manager/api/: __init__.py
mesh_components/resource_manager/doc/: index.md
mesh_components/resource_manager/resource_manager/: __init__.py
mesh_components/scheduler/api/: __init__.py  (+1 more)
mesh_components/task_runner/: __init__.py
tessia/server/: config.py  log.py
tessia_engine/: config.py  log.py
tessia_engine/api/: app.py  cmd.py  exceptions.py  manager.py
tessia_engine/auth/: __init__.py  free.py  ldap.py
tessia_engine/db/: cmd.py  connection.py  feeder.py  models.py  types.py
tessia_engine/lib/: post_install.py
tessia_engine/scheduler/: cmd.py  exceptions.py  looper.py  resources_manager.py  spawner.py  wrapper.py
tessia_engine/state_machines/: __init__.py  base.py
tests/unit/: config.py
tests_pytest/: decorators.py  test_sample.py
tests_pytest/state_machines/: null_hypervisor.py  ssh_stub.py
tools/: apply-git-hooks.sh  cleanup_db  cleanup_fixture  control_daemons  dregman  mkdocs.py  run_pylint.py  run_pytest_tests.py  run_tests.py
tools/ci/: orc  requirements.txt
tools/db/: gen_random_data.py
tools/git-hooks/: pre-commit
tsc/: TSC-Project-Intake-checklist.md
(+371 files in other folders)
