[metadata]
name = tessia_engine
author = IBM
summary = tessia - Task Execution Supporter and System Installation Assistant
description-file = README.md
home-page = https://gitlab.com/tessia-project
license = Apache 2.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
keywords =
    provisioning
    systems
    test

[files]
packages =
    tessia_engine
data_files =
    etc/tessia = etc/*

[entry_points]
console_scripts =
    tess-dbmanage = tessia_engine.db.cmd:main
    tess-api = tessia_engine.api.cmd:main
    tess-scheduler = tessia_engine.scheduler.cmd:main
