[metadata]
name = tessia
author = IBM
summary = tessia - Task Execution Supporter and System Installation Assistant
description-file = README.md
home-page = https://gitlab.com/tessia-project
license = Apache 2.0
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: System :: Hardware :: Mainframes
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
keywords =
    provisioning
    systems
    test

[files]
packages =
    tessia/server
namespace_packages =
    tessia
data_files =
    etc/tessia = etc/*

[entry_points]
console_scripts =
    tess-dbmanage = tessia.server.db.cmd:main
    tess-api = tessia.server.api.cmd:main
    tess-scheduler = tessia.server.scheduler.cmd:main
