[metadata]
name = tessia_cli
author = IBM
summary = Tessia command line client
description-file = ../README.md
home-page = https://gitlab.com/tessia-project
license = Apache 2.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
keywords =
    provisioning
    systems
    test

[files]
packages =
    tessia_cli

[entry_points]
console_scripts =
    tessia = tessia_cli.main:main
