[metadata]
name = tessia-cli
author = IBM
summary = tessia command line client
description-file = ../README.md
home-page = https://gitlab.com/tessia-project
license = Apache 2.0
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: System :: Hardware :: Mainframes
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
keywords =
    client
    provisioning
    systems
    test

[files]
packages =
    tessia/cli
namespace_packages =
    tessia

[entry_points]
console_scripts =
    tess = tessia.cli.main:main
