[package]
name = "installer-webhook"
version = "0.1.3"
authors = ["Alexander Efremkin <aefr@de.ibm.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
futures = "0.3"
warp = "0.3.6"
bytes = "1.6.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_yaml = "0.8.13"
log = "0.4.11"
log4rs = "1.3.0"

[dependencies.tokio]
version = "1.36.0"
features = ["rt-multi-thread", "time", "macros", "sync", "signal"]
